--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">Final Project Android 1</string>
+    <string name="app_name">Arcade Pong</string>
+    <string name="play">play</string>
+    <string name="Scoreboard">Scoreboard</string>
+    <string name="Win">YOU HAVE WON</string>
+    <string name="Lose">YOU HAVE LOST</string>
+    <string name="Score">Score</string>
+    <string name="Lives">Life left</string>
+    <string name="Error">Error</string>
 </resources>
