game working updated 19 Return to exit from score board

--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -16,5 +16,6 @@
     <string name="lastscore">התוצאה האחרונה</string>
     <string name="play_again">שחק שוב</string>
     <string name="submit_btn">שלח</string>
+    <string name="exit_btn">יציאה מהמשחק</string>
 
 </resources>
